# grhooks

./: Cargo.toml  README.md  cliff.toml  flake.nix  release.toml  rust-toolchain.toml
.github/workflows/: ci.yml  gh-schemes.yml  release.yml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: cmd.rs  lib.rs
crates/gh-schemes/: Cargo.toml
crates/origin/: Cargo.toml
crates/origin/src/: errors.rs  github.rs  gitlab.rs  lib.rs  webhook.rs
examples/: ping.yml  pull_on_publish.json  pull_on_publish.toml
scripts/: install.ps1  install.sh  update-schemas.sh
src/: errors.rs  handlers.rs  main.rs  validator.rs
