[package]
name = "grhooks"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
edition = "2024"
authors = ["RustLangES contact@rustlang-es.org"]
description = "Configurable github/gitlab webhook server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustLangES/grhooks"

[workspace]
members = ["crates/core", "crates/config"]

[workspace.dependencies]
serde_json = "1"
tracing = "0.1"

[dependencies]
axum = { version = "0.8.3", default-features = false, features = [
    "json",
    "tracing",
    "http1",
    "http2",
    "tokio",
    "matched-path",
] }
constant_time_eq = "0.4.2"
grhooks-config = { version = "0.1.0", path = "crates/config" }
grhooks-core = { version = "0.1.0", path = "crates/core" }
hex = "0.4.3"
hmac = "0.12.1"
serde_json.workspace = true
sha1 = "0.10.6"
sha2 = "0.10.8"
tokio = { version = "1.44.1", default-features = false, features = ["full"] }
tracing.workspace = true
tracing-subscriber = "0.3.19"
