[package]
name = "grhooks"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
edition = "2024"
authors = ["RustLangES contact@rustlang-es.org"]
description = "Configurable github/gitlab webhook server"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustLangES/grhooks"

[workspace]
members = ["crates/core", "crates/config", "crates/origin"]

[workspace.dependencies]
serde_json = "1"
tracing = "0.1"

[dependencies]
axum = { version = "0.8.3", default-features = false, features = [
    "json",
    "tracing",
    "http1",
    "http2",
    "tokio",
    "matched-path",
] }
grhooks-config = { version = "0.1.0", path = "crates/config" }
grhooks-core = { version = "0.1.0", path = "crates/core" }
grhooks-origin = { version = "0.1.0", path = "crates/origin" }
notify = "8.0.0"
serde_json.workspace = true
tokio = { version = "1.44.1", default-features = false, features = ["full"] }
tracing.workspace = true
tracing-subscriber = "0.3.19"
