[package]
name = "grhooks-config"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5", features = ["env"] }
gh-schemes = { version = "0.1", path = "../gh-schemes" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
