[package]
name = "grhooks-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grhooks-config = { version = "0.1.0", path = "../config" }
serde_json.workspace = true
srtemplate = { version = "0.3", default-features = false, path = "../../../../../rust/srtemplate" }
tracing.workspace = true
