[package]
name = "grhooks-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grhooks-config = { version = "0.1.0", path = "../config" }
serde_json.workspace = true
srtemplate = "0.3"
tempfile = "3.19.1"
tokio = { version = "1.44.1", default-features = false, features = ["process"] }
tracing.workspace = true
