[package]
name = "gh-schemes"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "now",
    "serde",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
